# docs-agentic-ai

./: .gitignore  lyra_architecture.md  phase1_implementation_plan.md  phase1_incremental_sprints.md  working_with_ai_implementation_guide.md
demo-lyra/: DEMO_CHECKLIST.md  DEMO_SUMMARY.md  README.md  README_DEMO.md  requirements_demo.txt  setup_demo.sh
demo-lyra/demo/: PRESENTATION_SCRIPT.md  __init__.py  demo_agent.py
demo-lyra/demo/fixtures/: confluence_pages.json  github_prs.json  jira_tickets.json
demo-lyra/demo/outputs/: openshift_v2.1_release_notes.md
demo-lyra/src/: __init__.py  main.py
demo-lyra/src/utils/: __init__.py  terminal_ui.py
lyra-agent/: .gitignore  pyproject.toml
lyra-agent/data/templates/: release_notes.md
lyra-agent/src/: __init__.py  main.py
lyra-agent/src/agents/: controller.py  critic_node.py  executor_node.py  node_utils.py  planner_node.py  synthesizer_node.py
lyra-agent/src/config/: prompts.yaml  settings.py
lyra-agent/src/operations/: doc_creator.py
lyra-agent/src/schemas/: agent_state.py  data_models.py
lyra-agent/src/services/: knowledge_service.py  vector_store.py
lyra-agent/src/tools/: base_tool.py  github_tool.py  jira_tool.py  smart_tools.py  tool_registry.py
lyra-agent/src/utils/: logger.py  metrics.py
lyra-agent/tests/: test_sprint1.py
